Legend
------
+  Addition
-  Removal
*  Alteration/other

Changes
-------
* Made Asteroids example use the CD drive better

2004.02.07 (beta)
-----------------
* First public release