@@ -47,7 +47,7 @@ Interop               Beta
 
 Video                 Beta
 Low-level OpenGL      Beta
-High-level OpenGL     Not Completed
+High-level OpenGL     In Progress
 Font rendering        Beta
 
 Audio                 Alpha
